[package]
name = "auctionhouse"
version = "0.1.0"
edition = "2021"
authors = ["Keyne"]
description = "NFT Auction house leveraging new Archway fees modules"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]


[dependencies]
archway-bindings = { git = "https://github.com/archway-network/archway-bindings.git" }
cosmwasm-schema = "1.2.2"
cosmwasm-std = "1.2.2"
cw-multi-test = { version = "0.16.2", optional = true }
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw721 = "0.17.0"
schemars = "0.8.12"
serde = { version = "1.0.156", features = ["derive"] }
thiserror = "1.0.39"

[dev-dependencies]
cw-multi-test = "0.16.2"
